feat: updated test for juliatransform in chaosgamedescription